<resources>
    <string name="app_name">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_account">you don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="add_new_note">add new note</string>
    <string name="empty_note">empty note</string>
</resources>